# napari-sklearn-decomposition

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: index.md
src/napari_sklearn_decomposition/: __init__.py  _faces_sample_data.py  _sample_data.py  _widget.py  napari.yaml  stICA.py  utils.py
src/napari_sklearn_decomposition/_plotting/: features_line_plot.py
src/napari_sklearn_decomposition/_tests/: test_sample_data.py  test_widget.py
