[metadata]
name = napari-sklearn-decomposition
version = 0.0.1
author = jdeschamps
author_email = jdeschamps
url = https://github.com/jdeschamps/napari-sklearn-decomposition
license = BSD-3-Clause
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/jdeschamps/napari-sklearn-decomposition/issues
    Documentation = https://github.com/jdeschamps/napari-sklearn-decomposition#README.md
    Source Code = https://github.com/jdeschamps/napari-sklearn-decomposition
    User Support = https://github.com/jdeschamps/napari-sklearn-decomposition/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    scikit-learn

[options.packages.find]
where = src

[options.package_data]
napari-sklearn-decomposition = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-sklearn-decomposition = napari_sklearn_decomposition:napari.yaml
