[metadata]
name = napari_sklearn_decomposition
version = 0.0.1
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdeschamps/napari-sklearn-decomposition
author = jdeschamps
author_email = jdeschamps
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/jdeschamps/napari-sklearn-decomposition/issues
    Documentation = https://github.com/jdeschamps/napari-sklearn-decomposition#README.md
    Source Code = https://github.com/jdeschamps/napari-sklearn-decomposition
    User Support = https://github.com/jdeschamps/napari-sklearn-decomposition/issues

[options]
packages = find:
install_requires =
    numpy
    scikit-learn
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-sklearn-decomposition = napari_sklearn_decomposition:napari.yaml

[options.package_data]
napari_sklearn_decomposition =
    napari.yaml

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
